Various scenario fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="maindiv">
 	<div id="resultDiv">
 		<div id="expressionDiv"></div>
-		<textarea id="result" rows="1"></textarea>
+		<textarea id="result" rows="1">0</textarea>
 	</div>
 	<div id="buttonsDiv">
 		<input class="calcButton btnfunc btnAC" id="btnAC" type="button" value="AC">
