Converted buttons to href tag

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
 		<textarea id="result" rows="1">0</textarea>
 	</div>
 	<div id="buttonsDiv">
-		<input class="calcButton btnfunc btnAC" id="btnAC" type="button" value="AC">
-		<input class="calcButton btnfunc" id="btnBackspace" type="button" value="&larr;">
-		<input class="calcButton btnfunc" id="btnPercent" type="button" value="%">
-		<input class="calcButton btnfunc" id="btnDivide" type="button" value="/">
+		<a href="#" class="calcButton btnfunc btnAC" id="btnAC">C</a>
+		<a href="#" class="calcButton btnfunc" id="btnBackspace">&larr;</a>
+		<a href="#" class="calcButton btnfunc" id="btnPercent">%</a>
+		<a href="#" class="calcButton btnfunc" id="btnDivide">/</a>
 
-		<input class="calcButton btnnum" id="btn7" type="button" value="7">
-		<input class="calcButton btnnum" id="btn8" type="button" value="8">
-		<input class="calcButton btnnum" id="btn9" type="button" value="9">
-		<input class="calcButton btnfunc" id="btnMultiply" type="button" value="*">
+		<a href="#" class="calcButton btnnum" id="btn7">7</a>
+		<a href="#" class="calcButton btnnum" id="btn8">8</a>
+		<a href="#" class="calcButton btnnum" id="btn9">9</a>
+		<a href="#" class="calcButton btnfunc" id="btnMultiply">*</a>
 
-		<input class="calcButton btnnum" id="btn4" type="button" value="4">
-		<input class="calcButton btnnum" id="btn5" type="button" value="5">
-		<input class="calcButton btnnum" id="btn6" type="button" value="6">
-		<input class="calcButton btnfunc" id="btnMinus" type="button" value="-">
+		<a href="#" class="calcButton btnnum" id="btn4">4</a>
+		<a href="#" class="calcButton btnnum" id="btn5">5</a>
+		<a href="#" class="calcButton btnnum" id="btn6">6</a>
+		<a href="#" class="calcButton btnfunc" id="btnMinus">-</a>
 
-		<input class="calcButton btnnum" id="btn1" type="button" value="1">
-		<input class="calcButton btnnum" id="btn2" type="button" value="2">
-		<input class="calcButton btnnum" id="btn3" type="button" value="3">
-		<input class="calcButton btnfunc" id="btnPlus" type="button" value="+">
+		<a href="#" class="calcButton btnnum" id="btn1">1</a>
+		<a href="#" class="calcButton btnnum" id="btn2">2</a>
+		<a href="#" class="calcButton btnnum" id="btn3">3</a>
+		<a href="#" class="calcButton btnfunc" id="btnPlus">+</a>
 
-		<input class="calcButton btnnum" id="btn0" type="button" value="0">
-		<input class="calcButton btnnum" id="btn00" type="button" value="00">
-		<input class="calcButton btnnum" id="btnDot" type="button" value=".">
-		<input class="calcButton btnfunc" id="btnEquals" type="button" value="=">
+		<a href="#" class="calcButton btnnum" id="btn0">0</a>
+		<a href="#" class="calcButton btnnum" id="btn00">00</a>
+		<a href="#" class="calcButton btnnum" id="btnDot">.</a>
+		<a href="#" class="calcButton btnfunc" id="btnEquals">=</a>
 	</div>
 
 	<div id="historyDiv">
