Added history log clear logic

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 	</div>
 
 	<div id="historyDiv">
-
+		<h2>Logs</h2>
+		<div><a href="#" id="clearLogs">Clear</a></div>
+		<div id="historyLog"></div>
 	</div>
 </div>
 </body>
