--- a/index.html
+++ b/index.html
@@ -15,37 +15,44 @@
 		<div id="expressionDiv"></div>
 		<textarea id="result" rows="1">0</textarea>
 	</div>
-	<div id="buttonsDiv">
-		<a href="#" class="calcButton btnfunc btnAC" id="btnAC">C</a>
-		<a href="#" class="calcButton btnfunc" id="btnBackspace">&larr;</a>
-		<a href="#" class="calcButton btnfunc" id="btnPercent">%</a>
-		<a href="#" class="calcButton btnfunc" id="btnDivide">/</a>
 
-		<a href="#" class="calcButton btnnum" id="btn7">7</a>
-		<a href="#" class="calcButton btnnum" id="btn8">8</a>
-		<a href="#" class="calcButton btnnum" id="btn9">9</a>
-		<a href="#" class="calcButton btnfunc" id="btnMultiply">*</a>
+	<div id="centerContainer">
+		<div id="buttonsDiv">
+			<div id="buttonsContainer">
+				<a href="#" class="calcButton btnfunc btnAC" id="btnAC">C</a>
+				<a href="#" class="calcButton btnfunc" id="btnBackspace">&larr;</a>
+				<a href="#" class="calcButton btnfunc" id="btnPercent">%</a>
+				<a href="#" class="calcButton btnfunc" id="btnDivide">/</a>
 
-		<a href="#" class="calcButton btnnum" id="btn4">4</a>
-		<a href="#" class="calcButton btnnum" id="btn5">5</a>
-		<a href="#" class="calcButton btnnum" id="btn6">6</a>
-		<a href="#" class="calcButton btnfunc" id="btnMinus">-</a>
+				<a href="#" class="calcButton btnnum" id="btn7">7</a>
+				<a href="#" class="calcButton btnnum" id="btn8">8</a>
+				<a href="#" class="calcButton btnnum" id="btn9">9</a>
+				<a href="#" class="calcButton btnfunc" id="btnMultiply">*</a>
 
-		<a href="#" class="calcButton btnnum" id="btn1">1</a>
-		<a href="#" class="calcButton btnnum" id="btn2">2</a>
-		<a href="#" class="calcButton btnnum" id="btn3">3</a>
-		<a href="#" class="calcButton btnfunc" id="btnPlus">+</a>
+				<a href="#" class="calcButton btnnum" id="btn4">4</a>
+				<a href="#" class="calcButton btnnum" id="btn5">5</a>
+				<a href="#" class="calcButton btnnum" id="btn6">6</a>
+				<a href="#" class="calcButton btnfunc" id="btnMinus">-</a>
 
-		<a href="#" class="calcButton btnnum" id="btn0">0</a>
-		<a href="#" class="calcButton btnnum" id="btn00">00</a>
-		<a href="#" class="calcButton btnnum" id="btnDot">.</a>
-		<a href="#" class="calcButton btnfunc" id="btnEquals">=</a>
-	</div>
+				<a href="#" class="calcButton btnnum" id="btn1">1</a>
+				<a href="#" class="calcButton btnnum" id="btn2">2</a>
+				<a href="#" class="calcButton btnnum" id="btn3">3</a>
+				<a href="#" class="calcButton btnfunc" id="btnPlus">+</a>
 
-	<div id="historyDiv">
-		<h2>Logs</h2>
-		<div><a href="#" id="clearLogs">Clear</a></div>
-		<div id="historyLog"></div>
+				<a href="#" class="calcButton btnnum" id="btn0">0</a>
+				<a href="#" class="calcButton btnnum" id="btn00">00</a>
+				<a href="#" class="calcButton btnnum" id="btnDot">.</a>
+				<a href="#" class="calcButton btnfunc" id="btnEquals">=</a>
+			</div>
+		</div>
+
+		<div id="historyDiv">
+			<div class="historyHeader">
+				<h3>History</h3>
+				<a href="#" id="clearLogs">Clear</a>
+			</div>
+			<div id="historyLog"></div>
+		</div>
 	</div>
 </div>
 </body>
