Making editor readonly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="maindiv">
 	<div id="resultDiv">
 		<div id="expressionDiv"></div>
-		<textarea id="result" rows="1">0</textarea>
+		<textarea id="result" rows="1" readonly>0</textarea>
 	</div>
 
 	<div id="centerContainer">
