--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
 		</div>
 	</div>
 </div>
+
+<div class="footerSlot">
+	<a target="_blank" href="https://pratikabu.com">Author</a> | <a target="_blank" href="https://github.com/pratikabu/calculator/blob/master/README.md">About</a>
+</div>
 </body>
 </html>
