Updating about link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 </div>
 
 <div class="footerSlot">
-	<a target="_blank" href="https://pratikabu.com">Author</a> | <a target="_blank" href="https://github.com/pratikabu/calculator/blob/master/README.md">About</a>
+	<a target="_blank" href="https://pratikabu.com">Author</a> |
+	<a target="_blank" href="https://github.com/pratikabu/calculator/blob/master/README.md#calculator">About</a>
 </div>
 </body>
 </html>
