Adding donate button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 	<meta property="og:url" content="https://calculator.pratikabu.com" />
 	<meta property="og:title" content="Calculator - Simple, Intuitive, Responsive" />
-<!--	<meta property="og:image" content="https://scrolltotop.pratikabu.com/res/promo-small-1280.png" />-->
+<!--	<meta property="og:image" content="full-url" />-->
 	<meta property="og:description" content="An open source, simple, client-side calculator built using client side web technologies. Optimized for touch screen devices." />
 	<meta property="og:type" content="website">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
+<!--	<link rel="shortcut icon" type="image/png" href="res/pratikabu-stt-128.png">-->
 	<link rel="stylesheet" href="res/stylesheet.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.0.1/math.min.js"></script>
@@ -70,8 +71,9 @@
 
 <div class="footerSlot">
 	<div>
+		<a target="_blank" href="https://github.com/pratikabu/calculator/blob/master/README.md#calculator">About</a> |
 		<a target="_blank" href="https://pratikabu.com">Author</a> |
-		<a target="_blank" href="https://github.com/pratikabu/calculator/blob/master/README.md#calculator">About</a>
+		<a target="_blank" href="https://scrolltotop.pratikabu.com/donate">Donate</a>
 	</div>
 	<div>
 		Simple, Intuitive, Responsive, <a href="https://github.com/pratikabu/calculator">Open Sourced</a>, client-side Calculator
