Making elements focusable

--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
 	<div id="centerContainer">
 		<div id="buttonsDiv">
 			<div id="buttonsContainer">
-				<a href="#" class="calcButton btnfunc btnAC" id="btnAC">C</a>
-				<a href="#" class="calcButton btnfunc" id="btnBackspace">&larr;</a>
-				<a href="#" class="calcButton btnfunc" id="btnPercent">%</a>
-				<a href="#" class="calcButton btnfunc" id="btnDivide">/</a>
+				<span class="calcButton btnfunc btnAC" tabindex="0" id="btnAC">C</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnBackspace">&larr;</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnPercent">%</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnDivide">/</span>
 
-				<a href="#" class="calcButton btnnum" id="btn7">7</a>
-				<a href="#" class="calcButton btnnum" id="btn8">8</a>
-				<a href="#" class="calcButton btnnum" id="btn9">9</a>
-				<a href="#" class="calcButton btnfunc" id="btnMultiply">*</a>
+				<span class="calcButton btnnum" tabindex="0" id="btn7">7</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn8">8</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn9">9</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnMultiply">*</span>
 
-				<a href="#" class="calcButton btnnum" id="btn4">4</a>
-				<a href="#" class="calcButton btnnum" id="btn5">5</a>
-				<a href="#" class="calcButton btnnum" id="btn6">6</a>
-				<a href="#" class="calcButton btnfunc" id="btnMinus">-</a>
+				<span class="calcButton btnnum" tabindex="0" id="btn4">4</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn5">5</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn6">6</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnMinus">-</span>
 
-				<a href="#" class="calcButton btnnum" id="btn1">1</a>
-				<a href="#" class="calcButton btnnum" id="btn2">2</a>
-				<a href="#" class="calcButton btnnum" id="btn3">3</a>
-				<a href="#" class="calcButton btnfunc" id="btnPlus">+</a>
+				<span class="calcButton btnnum" tabindex="0" id="btn1">1</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn2">2</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn3">3</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnPlus">+</span>
 
-				<a href="#" class="calcButton btnnum" id="btn0">0</a>
-				<a href="#" class="calcButton btnnum" id="btn00">00</a>
-				<a href="#" class="calcButton btnnum" id="btnDot">.</a>
-				<a href="#" class="calcButton btnfunc" id="btnEquals">=</a>
+				<span class="calcButton btnnum" tabindex="0" id="btn0">0</span>
+				<span class="calcButton btnnum" tabindex="0" id="btn00">00</span>
+				<span class="calcButton btnnum" tabindex="0" id="btnDot">.</span>
+				<span class="calcButton btnfunc" tabindex="0" id="btnEquals">=</span>
 			</div>
 		</div>
 
