noselect and hover improvements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</div>
 
 	<div id="centerContainer">
-		<div id="buttonsDiv">
+		<div id="buttonsDiv" class="noselect">
 			<div id="buttonsContainer">
 				<span class="calcButton btnfunc btnAC" tabindex="0" id="btnAC">C</span>
 				<span class="calcButton btnfunc" tabindex="0" id="btnBackspace">&larr;</span>
