Adding trash icon to clear logs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div id="historyDiv">
 			<div class="historyHeader">
 				<h3>History</h3>
-				<a href="#" id="clearLogs">Clear</a>
+				<a href="#" id="clearLogs" title="Clear Logs"><img src="res/trash.svg" alt="Clear Logs"></a>
 			</div>
 			<div id="historyLog"></div>
 		</div>
