Adding app icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<!--	<link rel="shortcut icon" type="image/png" href="res/pratikabu-stt-128.png">-->
+	<link rel="shortcut icon" type="image/png" href="res/app-128.png">
 	<link rel="stylesheet" href="res/stylesheet.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.0.1/math.min.js"></script>
@@ -77,6 +77,9 @@
 	</div>
 	<div>
 		Simple, Intuitive, Responsive, <a href="https://github.com/pratikabu/calculator">Open Sourced</a>, client-side Calculator
+	</div>
+	<div>
+		<a href="https://github.com/pratikabu/calculator" title="GitHub Page"><img class="appicon" src="res/app-256.png" alt="Calculator Icon"></a>
 	</div>
 </div>
 </body>
