--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<div>
 		<a href="https://github.com/pratikabu/calculator/blob/master/README.md#calculator">About</a> |
 		<a href="https://pratikabu.com">Author</a> |
-		<a href="https://scrolltotop.pratikabu.com/donate">Donate</a>
+		<a href="https://pratikabu.com/donate">Donate</a>
 	</div>
 	<div>
 		Simple, Intuitive, Responsive, <a href="https://github.com/pratikabu/calculator">Open Sourced</a>, client-side Calculator
